--- a/CombatHeadgearPlugin/CombatHeadgearPlugin.csproj
+++ b/CombatHeadgearPlugin/CombatHeadgearPlugin.csproj
@@ -5,10 +5,10 @@
   <PropertyGroup>
     <Version>0.0.0.1</Version>
     <Description>A sample plugin.</Description>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/goatcorp/CombatHeadgearPlugin</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
-    <RootNamespace>SamplePlugin</RootNamespace>
+    <RootNamespace>CombatHeadgearPlugin</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
