--- a/CombatHeadgear/CombatHeadgear.csproj
+++ b/CombatHeadgear/CombatHeadgear.csproj
@@ -8,6 +8,6 @@
     <PackageProjectUrl>https://github.com/GitPaulo/CombatHeadgear</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
-    <RootNamespace>CombatHeadgearPlugin</RootNamespace>
+    <RootNamespace>CombatHeadgear</RootNamespace>
   </PropertyGroup>
 </Project>
