updating dalamud and fixing errors

--- a/CombatHeadgear/CombatHeadgear.csproj
+++ b/CombatHeadgear/CombatHeadgear.csproj
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
+    <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
 
-  <PropertyGroup>
-    <Version>1.1.0</Version>
-    <Description>A Dalamud Plugin to Toggle Headgear on Combat</Description>
-    <PackageProjectUrl>https://github.com/GitPaulo/CombatHeadgear</PackageProjectUrl>
-    <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
-    <IsPackable>false</IsPackable>
-    <RootNamespace>CombatHeadgear</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0-windows</TargetFramework>
+        <LangVersion>12.0</LangVersion>
+        <EnablePreviewFeatures>true</EnablePreviewFeatures>
+        <Authors>GitPaulo</Authors>
+        <Version>1.0.1</Version>
+        <Description>A plugin to automatically toggle headgear in/out of combat.</Description>
+        <IsPackable>false</IsPackable>
+        <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/GitPaulo/RightClickSearchInfo</PackageProjectUrl>
+        <RootNamespace>CombatHeadgear</RootNamespace>
+    </PropertyGroup>
 </Project>
