update to dala12

--- a/CombatHeadgear/CombatHeadgear.csproj
+++ b/CombatHeadgear/CombatHeadgear.csproj
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
-
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
     <PropertyGroup>
-        <Authors>GitPaulo</Authors>
         <Version>1.0.1</Version>
         <Description>A plugin to automatically toggle headgear in/out of combat.</Description>
-        <IsPackable>false</IsPackable>
+        <Authors>GitPaulo</Authors>
         <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/GitPaulo/RightClickSearchInfo</PackageProjectUrl>
-        <RootNamespace>CombatHeadgear</RootNamespace>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 </Project>
